# ProjektKraken

./: .buildinfo  .coverage  .env.semantic_search.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURAL_REVIEW_REPORT.md  ARCHITECTURE_DIAGRAMS.html  BACKUP_STRATEGY.html  CHANGELOG.html  CHANGELOG.md  CODE_ANALYSIS_REPORT.html  CODE_ANALYSIS_REPORT.md  CODE_IMPROVEMENTS_SUMMARY.html  CODE_QUALITY_ASSESSMENT.md  CODE_QUALITY_REPORT.html  CODE_REVIEW_COMPREHENSIVE.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_SUMMARY.md  COVERAGE_IMPROVEMENT_SUMMARY.md  DATABASE.html  DEMO_DATABASE.md  DEPLOYMENT_SIZE_SUMMARY.md  DEVELOPMENT.html  DOCUMENTATION_CLEANUP_SUMMARY.md  Design.html  Design.md  IMPLEMENTATION_SUMMARY.html  IMPLEMENTATION_SUMMARY.md  INDEX.html  LICENSE.html  LLM_INTEGRATION.html  LLM_REVIEW.html  LLM_REVIEW_SUMMARY.html  LONGFORM.html  LONGFORM_IMPLEMENTATION_SUMMARY.html  MAP_IMPLEMENTATION_SUMMARY.md  MAP_USAGE_EXAMPLES.html  MAP_USAGE_EXAMPLES.md  PROBLEM_STATEMENT_COMPLIANCE.md  PRODUCTION_READINESS_REPORT.html  (+91 more)
.doctrees/: ARCHITECTURE_DIAGRAMS.doctree  BACKUP_STRATEGY.doctree  CHANGELOG.doctree  CODE_ANALYSIS_REPORT.doctree  CODE_IMPROVEMENTS_SUMMARY.doctree  CODE_QUALITY_REPORT.doctree  DATABASE.doctree  DEVELOPMENT.doctree  Design.doctree  IMPLEMENTATION_SUMMARY.doctree  INDEX.doctree  LICENSE.doctree  LLM_INTEGRATION.doctree  LLM_REVIEW.doctree  LLM_REVIEW_SUMMARY.doctree  LONGFORM.doctree  LONGFORM_IMPLEMENTATION_SUMMARY.doctree  MAP_USAGE_EXAMPLES.doctree  PRODUCTION_READINESS_REPORT.doctree  PYSIDE6_ENUM_SOLUTION.doctree  PYSIDE6_TYPE_ISSUES.doctree  PYVIS_INTEGRATION_GUIDE.doctree  QT_THREADING_SAFETY.doctree  README.doctree  REFACTORING_SUMMARY.doctree  RELATION_ATTRIBUTES_UI_PLAN.doctree  RELEASE_CHECKLIST_TEMPLATE.doctree  RELEASE_POLICY.doctree  REVIEW_SUMMARY.doctree  SCHEMA_REFERENCE.doctree  SECURITY.doctree  SEMANTIC_SEARCH.doctree  TAG_MIGRATION_GUIDE.doctree  TEMPORAL_MAPS_CONCEPT.doctree  TEMPORAL_RELATIONS.doctree  TESTING.doctree  TYPE_FIX_SUMMARY.doctree  WIKI_LINKING.doctree  WIKI_LINKING_DEMO.doctree  app.doctree  (+11 more)
.github/: copilot-instructions.md
Gemini/: PySide6 GIS Interface Development.html  Temporal Map Data in SQLite.html  Temporal Map Markers_ PySide Implementation.html
_modules/: index.html  re.html
_sources/: CHANGELOG.md.txt  DATABASE.md.txt  Design.md.txt  INDEX.md.txt  LLM_INTEGRATION.md.txt  LLM_REVIEW_SUMMARY.md.txt  LONGFORM.md.txt  LONGFORM_IMPLEMENTATION_SUMMARY.md.txt  MAP_USAGE_EXAMPLES.md.txt  PYVIS_INTEGRATION_GUIDE.md.txt  README.md.txt  REFACTORING_SUMMARY.md.txt  (+17 more)
(+469 files in other folders)
