[project]
name = "ProjektKraken"
version = "0.6.0"
description = "Project Kraken - A Timeline/Wiki Application"
requires-python = ">=3.13"
authors = [
    {name = "Christian Mintert", email = "christian.mintert@example.com"}
]

dependencies = [
    "PySide6>=6.10.0",
    "Pillow>=12.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
search = [
    "numpy>=2.2.0",
    "requests>=2.32.0",
]
webserver = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
]
graph = [
    "pyvis>=0.3.2",
]
# All optional features
all = [
    "ProjektKraken[search,webserver,graph]",
]
# Development dependencies
dev = [
    "pytest>=9.0.0",
    "pytest-qt>=4.5.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
    "mypy>=1.19.0",
    "Sphinx>=8.2.0",
    "myst-parser>=4.0.0",
    "furo>=2025.9.0",
    "sphinxcontrib-mermaid>=1.0.0",
    "pyinstaller>=6.17.0",
]

license = {text = "AGPL-3.0-only"}



[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I", "ANN"]
ignore = [
    "ANN401", # Dynamically typed expressions (Any) are allowed
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
